Fix invalid default error in Parallel::ForkManager
Strawberry Perl 5.14.4.1 and 5.16.3.1 comes with Moo-1.000008 bundled,
which makes Parallel::ForkManager-2.02 to fail.

--- a/dist.ini
+++ b/dist.ini
@@ -101,6 +101,7 @@ XML::LibXML = 0
 -description = Support Parallel::ForkManager to distribute tasks
 -relationship = recommends
 Parallel::ForkManager = 0
+Moo = >= 1.001000
 
 [OptionalFeature / rsync]
 -description = Support rsync tasks
