Add Config::Augeas as an optional dependency

--- a/dist.ini
+++ b/dist.ini
@@ -120,6 +120,11 @@ File::LibMagic = 0
 Test::mysqld = 0
 DBD::mysql = 0
 
+[OptionalFeature / use_config_augeas]
+-relationship = suggests
+-description = Run Augeas commands with Config::Augeas
+Config::Augeas = 0
+
 [Test::MinimumVersion]
 max_target_perl = 5.12.5
 
