--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -127,7 +127,7 @@ jobs:
       - name: Extract build tarball
         run: tar xvf build.tar
       - name: Install packages
-        run: sudo apt-get install -y aspell libaugeas-dev
+        run: sudo apt-get install -y aspell libaugeas-dev libmagic-dev
       - name: Setup Perl
         id: perl
         uses: shogo82148/actions-setup-perl@v1
