--- a/dist.ini
+++ b/dist.ini
@@ -81,6 +81,7 @@ YAML = != 1.25
 
 [Prereqs / DevelopRequires]
 Perl::Critic::Community = 1.000
+Perl::Critic::Pulp = 0
 Perl::Critic::TooMuchCode = 0.13
 Test::Kwalitee = 0
 Test::PerlTidy = 0
