--- a/.github/DISCUSSION_TEMPLATE/potential-issues.yml
+++ b/.github/DISCUSSION_TEMPLATE/potential-issues.yml
@@ -3,14 +3,14 @@ labels: 'triage needed'
 body:
     - type: textarea
       attributes:
-          label: Describe the bug
-          description: A clear and concise description of what the bug is.
+          label: Describe your experience
+          description: A clear and concise description of the observed behavior.
       validations:
           required: true
     - type: textarea
       attributes:
           label: Expected behavior
-          description: A clear and concise description of what is expected instead.
+          description: A clear and concise description of the expected behavior.
       validations:
           required: true
     - type: textarea
@@ -18,15 +18,15 @@ body:
           label: How to reproduce it
           description: Steps to reproduce the unexpected behavior.
           placeholder: |
-              1.
-              2.
-              3.
+              1. Do this.
+              2. Then do that.
+              3. Observe the issue.
       validations:
           required: true
     - type: textarea
       attributes:
           label: Code example
-          description: Shortest code example that demonstrates the bug.
+          description: Shortest code example that demonstrates the issue, like a Rexfile with a single task.
           placeholder: |
               ```perl
 
@@ -34,7 +34,7 @@ body:
     - type: textarea
       attributes:
           label: Additional context
-          description: For debug logs, run your code with `rex -d`, and [attach the output as a file](https://docs.github.com/en/github/managing-your-work-on-github/file-attachments-on-issues-and-pull-requests). If you must copy-paste, make sure to post it as a code block instead of text. Make sure any sensitive information is removed before posting.
+          description: Share debug logs after running your code with `rex -d`, and [attach the output as a file](https://docs.github.com/en/github/managing-your-work-on-github/file-attachments-on-issues-and-pull-requests). Remove any sensitive information before posting. If you choose to copy-paste, make sure to post as a code block instead of text.
     - type: markdown
       attributes:
           value: '## Circumstances'
@@ -42,6 +42,16 @@ body:
       attributes:
           label: Rex version
           description: Obtain it with `rex -v`.
+      validations:
+          required: true
+    - type: dropdown
+      attributes:
+          label: Installation method
+          options:
+              - package manager
+              - cpan client
+              - dzil install
+              - other (please describe above)
       validations:
           required: true
     - type: input
@@ -53,7 +63,7 @@ body:
     - type: input
       attributes:
           label: Operating system running rex
-          description: Be as specific as possible.
+          description: As specifically as possible.
       validations:
           required: true
     - type: input
@@ -61,14 +71,5 @@ body:
           label: Operating system managed by rex
           description: Even if it is the local machine.
           placeholder: local
-      validations:
-          required: true
-    - type: dropdown
-      attributes:
-          label: How rex was installed?
-          options:
-              - package manager
-              - cpan client
-              - dzil install
       validations:
           required: true
