--- a/.github/DISCUSSION_TEMPLATE/potential-issues.yml
+++ b/.github/DISCUSSION_TEMPLATE/potential-issues.yml
@@ -5,12 +5,14 @@ body:
       attributes:
           label: Describe your experience
           description: A clear and concise description of the observed behavior.
+          placeholder: What happens currently?
       validations:
           required: true
     - type: textarea
       attributes:
           label: Expected behavior
           description: A clear and concise description of the expected behavior.
+          placeholder: What should happen instead?
       validations:
           required: true
     - type: textarea
@@ -26,7 +28,7 @@ body:
     - type: textarea
       attributes:
           label: Code example
-          description: Shortest code example that demonstrates the issue, like a Rexfile with a single task.
+          description: Short Rexfile to demonstrate the issue.
           placeholder: |
               ```perl
 
@@ -34,7 +36,8 @@ body:
     - type: textarea
       attributes:
           label: Additional context
-          description: Share debug logs after running your code with `rex -d`, and [attach the output as a file](https://docs.github.com/en/github/managing-your-work-on-github/file-attachments-on-issues-and-pull-requests). Remove any sensitive information before posting. If you choose to copy-paste, make sure to post as a code block instead of text.
+          description: Share debug logs after running your code with `rex -d`, and [attach the output as a file](https://docs.github.com/en/github/managing-your-work-on-github/file-attachments-on-issues-and-pull-requests). Remove any sensitive information before posting.
+          placeholder: If you choose to copy-paste, use a code block instead of text.
     - type: markdown
       attributes:
           value: '## Circumstances'
